<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/button_new_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_configuration"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_configuration"
        android:layout_gravity="center" />

    <ListView
        android:id="@+id/list_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white" />
</LinearLayout>
